kubernetes-dashboard/dashboard/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-forward-auth
spec:
  forwardAuth:
    address: http://kubernetes-dashboard-forward-auth.kubernetes-dashboard.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
