kubernetes-dashboard/dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - image: thomseddon/traefik-forward-auth
          name: traefik-forward-auth
          ports:
            - containerPort: 4181
              protocol: TCP
