kubernetes-dashboard/dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-forward-auth
  labels:
    app: kubernetes-dashboard-forward-auth
spec:
  type: ClusterIP
  selector:
    app: kubernetes-dashboard-forward-auth
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181
