kubernetes-dashboard/dashboard/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes-dashboard.localhost.com`)
      services:
        - kind: Service
          name: kubernetes-dashboard
          port: 443
      middlewares:
        - name: traefik-forward-auth
  tls:
    secretName: kubernetes-dashboard.localhost
